--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1471,7 +1471,7 @@ config SENSORS_NCT6775_I2C
 	tristate "I2C driver for Nuvoton NCT6775F and compatibles"
 	depends on I2C
 	select REGMAP_I2C
-	select SENSORS_NCT6775
+	select SENSORS_NCT6775_CORE
 	help
 	  If you say yes here you get support for the hardware monitoring
 	  functionality of the Nuvoton NCT6106D, NCT6775F, NCT6776F, NCT6779D,
@@ -1479,7 +1479,7 @@ config SENSORS_NCT6775_I2C
 	  Super-I/O chips via their I2C interface.
 
 	  If you're not building a kernel for a BMC, this is probably
-	  not the driver you want (see CONFIG_SENSORS_NCT6775_PLATFORM).
+	  not the driver you want (see CONFIG_SENSORS_NCT6775).
 
 	  This driver can also be built as a module. If so, the module
 	  will be called nct6775-i2c.
